auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_return_type_fun_def.c
void exit(int status);

struct s;



struct s return_struct_def(void) {
  exit(0);
}

int main(void) { return 0; }